--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -58,7 +58,7 @@ Format: `help`
 
 === Adding a student: `add`
 
-Adds a student to the faculty book +
+Adds a student to the address book +
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...`
 
 [TIP]
@@ -71,12 +71,12 @@ Examples:
 
 === Listing all students : `list`
 
-Shows a list of all students in the faculty book. +
+Shows a list of all students in the address book. +
 Format: `list`
 
 === Editing a student : `edit`
 
-Edits an existing student in the faculty book. +
+Edits an existing student in the address book. +
 Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
 
 ****
@@ -192,7 +192,7 @@ Returns people tagged with `t/students` or `t/colleagues`
 
 === Deleting a student : `delete`
 
-Deletes the specified student from the faculty book. +
+Deletes the specified student from the address book. +
 Format: `delete INDEX`
 
 ****
@@ -205,7 +205,7 @@ Examples:
 
 * `list` +
 `delete 2` +
-Deletes the 2nd student in the faculty book.
+Deletes the 2nd student in the address book.
 * `find Betsy` +
 `delete 1` +
 Deletes the 1st student in the results of the `find` command.
@@ -225,7 +225,7 @@ Examples:
 
 * `list` +
 `select 2` +
-Selects the 2nd student in the faculty book.
+Selects the 2nd student in the address book.
 * `find Betsy` +
 `select 1` +
 Selects the 1st student in the results of the `find` command.
@@ -243,12 +243,12 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 // tag::undoredo[]
 === Undoing previous command : `undo`
 
-Restores the faculty book to the state before the previous _undoable_ command was executed. +
+Restores the address book to the state before the previous _undoable_ command was executed. +
 Format: `undo`
 
 [NOTE]
 ====
-Undoable commands: those commands that modify the faculty book's content (`add`, `delete`, `edit` and `clear`).
+Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit` and `clear`).
 ====
 
 Examples:
@@ -292,7 +292,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 
 === Clearing all entries : `clear`
 
-Clears all entries from the faculty book while still maintaining the calendar. +
+Clears all entries from the address book while still maintaining the calendar. +
 Format: `clear`
 
 === Exiting the program : `exit`
