--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -90,7 +90,7 @@ Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
 Examples:
 
 * `edit 1 p/91234567 e/johndoe@example.com` +
-Edits the studentNumber number and email faculty of the 1st student to be `91234567` and `johndoe@example.com` respectively.
+Edits the student number and email address of the 1st student to be `91234567` and `johndoe@example.com` respectively.
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd student to be `Betsy Crower` and clears all existing tags.
 
@@ -155,7 +155,7 @@ Format: `email i/INDEX s/SUBJECT b/BODY`
 Examples:
 
 * `email i/2 s/Attendance Problem b/Your attendance is poor. Is there a problem?` +
-Gathers the email faculty of the student with index 2 for emailing, and sets the subject and body respectively.
+Gathers the email address of the student with index 2 for emailing, and sets the subject and body respectively.
 
 === Locating students by name/tag: `find`
 
