--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,7 +4,7 @@
 :imagesDir: images
 :stylesDir: stylesheets
 
-ConTAct was developed by the https://github.com/CS2103-AY1819S1-W13-3 +
+ConTAct was developed by the https://github.com/CS2103-AY1819S1-W13-3[CS2103-AY1819S1-W13-3] team. +
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
 == Project Team
