--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -163,7 +163,7 @@ image::UiClassDiagram.png[width="800"]
 
 *API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
 
-The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `StudentListPanel`, `StatusBarFooter`, `BrowserPanel` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
+The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `StudentListPanel`, `StatusBarFooter`, `EventListPanel` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
 The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
@@ -261,23 +261,25 @@ image::UML REST API.png[width="400"]
 
 Including UI features to make Outlook's mail drafting screen appear in the `Browser Panel`, and requiring the user to input the index of student to email, the subject, and the body as three seperate inputs instead of one.
 
-//tag::event[]
-=== Event feature
+//tag::calendar[]
+=== Calendar feature
 ==== Current Implementation
 
 Th event feature is largely centered around the `Event` class, and is integrated into ConTAct in a similar fashion to the address book.
-The main commands supporting this feature is `schedule` and `cancel`, which both interact with the `Calendar` model.
+The main commands supporting this feature are `schedule` and `cancel`, which both interact with the `Calendar` model by adding and deleting events from the calendar respectively.
 The `undo/redo` and `clear` commands were also modified to extend towards the calendar model.
 
 The Event class has these fields that the user can specify to schedule an event:
 
 * Event Name: The name of the event, valid if it is not an empty string.
-* Date: The date of the event, valid if expressed in this forms:  `DD-MM-YYYY`.
+* Date: The date of the event, valid if expressed in this form:  `DD-MM-YYYY`.
 It must also be a date that actually falls within a calendar and between the years 1600 to 9999 (i.e. dates such as 25-13-2000 are invalid).
 * Start Time: The start time of the event, valid in this form: `HH:MM`, in 24-hour format.
 * End Time: The end time of the event, valid if it is in this form: `HH:MM`, in 24-hour format.
 The end time must also come after the start time.
 * Description: (OPTIONAL) The description of the event, valid if it is not an empty string.
+
+Events are compared to each other chronologically, first by their dates, then their start times, then end times, and finally alphabetically by their event names. Events are considered equal if these fields are the same, ignoring description.
 
 During runtime, the events are stored in an observable list in the model architecture.
 This list is exposed to the UI to display the list accordingly.
@@ -300,7 +302,7 @@ This will simply create an event with the specified fields and store it accordin
 Once scheduled, the events will be inserted in its sorted position (by chronological order).
 
 The GUI itself will have a calendar component which will display the user's current list of events that they have
-scheduled, while adjusting for the current date.
+scheduled. On startup, the calendar will scroll to the first upcoming event.
 
 The sequence diagram below shows how the components interact for the scenario where the user issues the command `schedule EVENT`, where `EVENT` is the event as specified by the input parameters.
 
@@ -309,7 +311,7 @@ image::ScheduleEventSequenceDiagram.png[width="800"]
 
 The diagram below shows how the EventsCenter reacts to the CalendarChangedEvent, which also results in updates to the storage and the UI.
 
-.Component interactions for `delete EVENT` command (part 2)
+.Component interactions for `schedule EVENT` command (part 2)
 image::EventStorageSequenceDiagram.png[width="800"]
 
 The diagram below shows how the schedule command is parsed in the Logic component. Here again, `EVENT` is the event as specified by the input parameters.
@@ -337,10 +339,14 @@ Also, the interactions between the components work in much the same way as the s
 
 The `undo` and `redo` command was extended to include the actions made by the user while interacting with the calendar.
 
-The undo/redo feature is also facilitated by a VersionedCalendar, and further details are as described in the undo/redo feature.
+The undo/redo feature is also facilitated by a VersionedCalendar, and further details are as described in the undo/redo section.
 
 The most pertinent aspect of this feature is how the model component handles the undo/redo. The ModelManager simply keeps track of _which_
 model -- address book or calendar -- had committed a change, and handles it accordingly whenever the user wishes to undo or redo.
+
+As such, the ModelManager only exposes two main methods for handling the `undo` and `redo` command, which are `undo()` and `redo()` respectively. From there, the ModelManager handles the undo/redo operation for the respective model.
+
+The way this is done is simply by maintaining an enum `ModelType` which denotes which model the action had been performed on. Two stacks are also maintained: `undoStack` and `redoStack`, that keeps track of the corresponding operations performed. When a specific model is committed, it is pushed to the `undoStack` and the `redoStack` is cleared, and when the `undo` command is executed, it simply pops from the `undoStack` and pushes the result to the `redoStack`.
 
 As such, the user will be able to perform the following actions to yield the subsequent results:
 
@@ -402,6 +408,7 @@ is distinct.
 * **Alternative 2:** Store the list of events as its own separate model and separate storage.
 ** Pros: Will not interfere greatly with the implementation of the addressbook itself
 ** Cons: Will be detached from the original architecture
+// end::calendar[]
 
 // tag::attendance[]
 === Attendance feature
@@ -804,6 +811,7 @@ b. Require developers to download those libraries manually (this creates extra w
 *Value proposition*: manage students and student details more effectively by providing a centralized platform
 
 [appendix]
+// tag::userstories[]
 == User Stories
 
 Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (unlikely to have) - `*`
@@ -831,8 +839,7 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* *` |tutor |email students |let them know of any announcements
 |=======================================================================
-
-_{More to be added}_
+// end::userstories[]
 
 [appendix]
 == Use Cases
@@ -992,6 +999,8 @@ Use case ends.
 +
 Use case resumes at step 2.
 
+
+// tag::calendarusecases[]
 [discrete]
 === Use case: Schedule events
 
@@ -1024,7 +1033,7 @@ Use case ends.
 
 *Extensions*
 
-[noe]
+[none]
 * 1a. The parameter(s) is invalid.
 +
 [none]
@@ -1039,6 +1048,7 @@ Use case ends.
 ** 2a1. ConTAct shows an error message.
 +
 Use case ends.
+// end::calendarusecases[]
 
 [discrete]
 === Use case: Email students
