--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -74,6 +74,21 @@ Examples:
 Shows a list of all students in the address book. +
 Format: `list`
 
+=== Emailing a student : `email`
+
+ Allows the user to email a specified student. +
+ Format: `email INDEX s/SUBJECT b/BODY`
+ 
+ ****
+ * The subject of the email is specified after the s/ and the body after the b/.
+ * The user can specify only one student index, after the 'email' command word.
+ ****
+ 
+ Examples:
+ 
+ * `email 2 s/Attendance Problem b/Your attendance is poor. Is there a problem?` +
+ Gathers the email address of the student with index 2 for emailing, and sets the subject and body respectively.
+
 === Editing a student : `edit`
 
 Edits an existing student in the address book. +
