--- a/docs/team/yogtew.adoc
+++ b/docs/team/yogtew.adoc
@@ -52,3 +52,21 @@ https://github.com/CS2103-AY1819S1-W13-3/main/pull/87[#87]
 https://github.com/CS2103-AY1819S1-W13-3/main/pull/88[#88]
 https://github.com/CS2103-AY1819S1-W13-3/main/pull/103[#103]
 https://github.com/CS2103-AY1819S1-W13-3/main/pull/126[#126])
+
+== Contributions to the User Guide
+
+
+|===
+|_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
+|===
+
+include::../UserGuide.adoc[tag=attendance]
+
+== Contributions to the Developer Guide
+
+
+|===
+|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|===
+
+include::../DeveloperGuide.adoc[tag=attendance]
